# LocAI

./: .gitignore  readme.md
backend/: Dockerfile  db.sqlite3  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requirment.txt
backend-old/: main.py  requirements.txt
backend/backend/: settings.py  urls.py
backend/llms/: urls.py  views.py
frontend/: Dockerfile  docker-compose.yml  package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx  chat.jsx
